fix overflow hidden on mobile

--- a/_scss/base/_base.scss
+++ b/_scss/base/_base.scss
@@ -126,6 +126,17 @@ a {
  color: $c-me--purple;
 }
 
+h2 {
+  font-family: 'Bitter', serif;
+  font-size: 25px;
+}
+
+p {
+  font-family: 'Rubik', serif;
+  font-size: 16px;
+  line-height: 1.4em;
+}
+
 
 
 
